# GAN_SR_wind_field

./: .gitignore  README.md  array_job.slurm  cost_functions.py  datasets.py  dcgan_commented.py  download.slurm  download_data.py  job.slurm  param_search.py  plot_data.py  process_data.py  pyproject.toml  quick_job.slurm  requirements.txt  run.py  test.py  train.py
CNN_models/: Discriminator.py  Discriminator_3D.py  Generator.py  Generator_3D.py  Generator_3D_Resnet_ESRGAN.py  torch_blocks.py
GAN_models/: baseGAN.py  wind_field_GAN_2D.py  wind_field_GAN_3D.py
config/: config.py  config_test.ini  config_use.ini  wind_field_GAN_2D_config.ini  wind_field_GAN_3D_config.ini  wind_field_GAN_3D_config_cluster.ini  wind_field_GAN_3D_config_cluster_norm.ini  wind_field_GAN_3D_config_cluster_short.ini  wind_field_GAN_3D_config_cluster_short_std.ini  wind_field_GAN_3D_config_cluster_std.ini  wind_field_GAN_3D_config_local.ini
iocomponents/: displaybar.py
pretrained_models/G_best/: config.ini
pretrained_models/upscale16_pix4_no_adv_no_slicing/: config.ini
pretrained_models/upscale8_pix4_no_adv_no_slicing/: config.ini
slurm_jobs/: array_job.slurm  download.slurm  job.slurm
tools/: initialization.py  loggingclass.py  trainingtricks.py
